--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="name"></div>
-
+    <br>
+    <p>Github link: https://github.com/Vicwin13/DisplayJs</p>
     <script src="script.js"></script>
 </body>
 </html>
